@@ -103,6 +103,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>action   - r/w the action associated with the form</li>
 <li>document - r/o the enclosing document</li>
 <li>elements - r/o an array of controls in the form</li>
+<li>action   - r/w the target for any response from the form</li>
 <li>&lt;name&gt; - the name of a control in the form</li>
 </ul>
 <h4>events</h4>
